--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
   /* Your code here! */
-  background: light blue;
+  background: light-blue;
 }
 
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
