Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ div {
   /* Your code here! */
   width: 700px;
   margin: auto;
-  font-family: Helvetica neue;
+  font-family: Helvetica;
   background-color: white;
   padding: 30px;
 }
